[gd_scene load_steps=4 format=2]

[ext_resource path="res://SAV/LoadScreen.gd" type="Script" id=1]
[ext_resource path="res://SAV/LoadScreen.png" type="Texture" id=2]
[ext_resource path="res://SAV/LoadScreenTint.png" type="Texture" id=3]

[node name="LoadScreen" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Load" type="Timer" parent="."]

[node name="Unpause" type="Timer" parent="."]

[node name="FadeWait" type="Timer" parent="."]

[node name="Fade" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="LoadScreenTint" type="Sprite" parent="CanvasLayer"]
position = Vector2( 960, 540 )
z_index = 1
texture = ExtResource( 3 )

[node name="LoadScreen" type="Sprite" parent="CanvasLayer"]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
[connection signal="timeout" from="Load" to="." method="_on_Load_timeout"]
[connection signal="timeout" from="Unpause" to="." method="_on_Unpause_timeout"]
[connection signal="timeout" from="FadeWait" to="." method="_on_FadeWait_timeout"]
[connection signal="timeout" from="Fade" to="." method="_on_Fade_timeout"]
